--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^6.2",
         "laravel/socialite": "^4.3",
         "laravel/tinker": "^2.0",
+        "morilog/jalali": "3.*",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
